...
    <string name="movie_status_planned">Planned</string>
    <string name="movie_status_rumored">Rumored</string>
    <string name="movie_status_in_production">In Production</string>
    <string name="movie_status_post_production">Post Production</string>
    <string name="detail_lists_fallback">Lists</string>
    <string name="detail_lists_subtitle">Select which lists should include this title.</string>
    <string name="action_save">Save</string>
    <string name="action_saving">Saving…</string>

    <string name="appearance_language">App Language</string>
    <string name="appearance_language_subtitle">Override system language</string>
    <string name="appearance_language_system">System default</string>
    <string name="appearance_language_dialog_title">Choose Language</string>
...
    <string name="settings_debrid_subtitle">Experimental cloud account sources</string>

    <string name="playback_title">Playback Settings</string>
    <string name="playback_subtitle">Configure video playback and subtitle options</string>
    <string name="cd_decrease">Decrease</string>
    <string name="cd_increase">Increase</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_switch">Switch</string>
    <string name="action_apply">Apply</string>
    <string name="sub_opacity">Opacity</string>
    <string name="action_none">None</string>
    <string name="action_back">Back</string>
    <string name="action_close">Close</string>
...
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="genre_action_adventure">Action &amp; Adventure</string>
    <string name="genre_kids">Kids</string>
    <string name="genre_news">News</string>
    <string name="genre_reality">Reality</string>
    <string name="genre_sci_fi_fantasy">Sci-Fi &amp; Fantasy</string>
    <string name="genre_soap">Soap</string>
    <string name="genre_talk">Talk</string>
    <string name="genre_war_politics">War &amp; Politics</string>
    <string name="genre_anime">Anime</string>
...
